feat: clone definition api
