# src/docs/swagger.yaml
@@ -1,22 +1,33 @@
+basePath: /okk
 definitions:
   model.InstanceVariable:
     properties:
       name:
         description: 变量名
         type: string
-      type:
-        description: 变量类型 1=int 2=string 3=bool 4=float64
-        type: integer
       value:
         description: 变量值
         type: object
     type: object
-  request.BatchSyncRoleUsersRequest:
+  request.BatchSyncUserRoleRequest:
     properties:
-      roleUsersList:
+      roles:
         items:
-          $ref: '#/definitions/request.SyncRoleUsersRequest'
+          $ref: '#/definitions/request.RoleRequest'
         type: array
+      userRoles:
+        items:
+          $ref: '#/definitions/request.UserRoleRequest'
+        type: array
+      users:
+        items:
+          $ref: '#/definitions/request.UserRequest'
+        type: array
+    type: object
+  request.CloneDefinitionRequest:
+    properties:
+      id:
+        type: integer
     type: object
   request.DenyInstanceRequest:
     properties:
@@ -87,14 +98,26 @@ definitions:
           $ref: '#/definitions/model.InstanceVariable'
         type: array
     type: object
-  request.SyncRoleUsersRequest:
+  request.RoleRequest:
     properties:
-      roleId:
-        type: integer
-      userIds:
-        items:
-          type: integer
-        type: array
+      identifier:
+        type: string
+      name:
+        type: string
+    type: object
+  request.UserRequest:
+    properties:
+      identifier:
+        type: string
+      name:
+        type: string
+    type: object
+  request.UserRoleRequest:
+    properties:
+      roleIdentifier:
+        type: string
+      userIdentifier:
+        type: string
     type: object
   response.HttpResponse:
     properties:
@@ -215,6 +238,37 @@ paths:
           schema:
             $ref: '#/definitions/response.HttpResponse'
       summary: 更新流程模板
+      tags:
+      - process-definitions
+  /api/wf/process-definitions/_clone:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.CloneDefinitionRequest'
+      - description: WF-TENANT-CODE
+        in: header
+        name: WF-TENANT-CODE
+        required: true
+        type: string
+      - description: WF-CURRENT-USER
+        in: header
+        name: WF-CURRENT-USER
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.HttpResponse'
+      summary: 克隆流程定义列表
       tags:
       - process-definitions
   /api/wf/process-definitions/{id}:
@@ -525,37 +579,6 @@ paths:
       summary: 获取流程链路
       tags:
       - process-instances
-  /api/wf/role-users:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/request.SyncRoleUsersRequest'
-      - description: WF-TENANT-CODE
-        in: header
-        name: WF-TENANT-CODE
-        required: true
-        type: string
-      - description: WF-CURRENT-USER
-        in: header
-        name: WF-CURRENT-USER
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.HttpResponse'
-      summary: 同步(创建或更新)角色用户映射关系
-      tags:
-      - role-users
   /api/wf/role-users/_batch:
     post:
       consumes:
@@ -566,7 +589,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/request.BatchSyncRoleUsersRequest'
+          $ref: '#/definitions/request.BatchSyncUserRoleRequest'
       - description: WF-TENANT-CODE
         in: header
         name: WF-TENANT-CODE
